--- a/index.css
+++ b/index.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Questrial&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
 html,body{
     width: 100%;
@@ -12,8 +14,15 @@ html,body{
     height: 100%;
     background-color: #000;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+.main h2{
+    color: yellow;
+    margin-bottom: 10px;
+    text-transform: capitalize;
+    font-weight: 800;
 }
 .slider{
     width: 25%;
@@ -21,6 +30,10 @@ html,body{
     background-color: rgb(255, 255, 254);
     border-radius: 19px;
     overflow: hidden;
+    border: 3px solid yellow;
+    /* display: flex;
+    flex-direction: row; */
+    position: relative;
 }
 .slider .swiper-wrapper{
     width: 100%;
@@ -40,8 +53,18 @@ html,body{
     justify-content: center;
 }
 .slider .swiper-slide video{
-    width:100%;
-    height:100%;
-    border-radius: 19px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
+}
+.navigate{
+    /* background-color: pink; */
+    position: absolute;
+    top: 0px;
+    right: 2px;
+    display: flex;
+    flex-direction: column;
+}
+.navigate i{
+    font-size: 1.6rem;
 }
