--- a/index.css
+++ b/index.css
@@ -1,15 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Questrial&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
-html,body{
+
+html,
+body {
     width: 100%;
     height: 100%;
 }
-.main{
+
+.main {
     width: 100%;
     height: 100%;
     background-color: #000;
@@ -18,13 +22,15 @@ html,body{
     align-items: center;
     justify-content: center;
 }
-.main h2{
+
+.main h2 {
     color: yellow;
     margin-bottom: 10px;
     text-transform: capitalize;
     font-weight: 800;
 }
-.slider{
+
+.slider {
     width: 25%;
     height: 88%;
     background-color: rgb(255, 255, 254);
@@ -35,14 +41,16 @@ html,body{
     flex-direction: row; */
     position: relative;
 }
-.slider .swiper-wrapper{
+
+.slider .swiper-wrapper {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     border-radius: 19px;
 }
-.slider .swiper-slide{
+
+.slider .swiper-slide {
     width: 100%;
     height: 100%;
     border-radius: 19px;
@@ -52,19 +60,42 @@ html,body{
     align-items: center;
     justify-content: center;
 }
-.slider .swiper-slide video{
+
+.slider .swiper-slide video {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-.navigate{
+
+.navigate {
     /* background-color: pink; */
     position: absolute;
-    top: 0px;
-    right: 2px;
+    top: 50%;
+    transform: translate(0, -50%);
+    right: 150px;
     display: flex;
     flex-direction: column;
 }
-.navigate i{
-    font-size: 1.6rem;
+
+.navigate .up {
+    font-size: 2rem;
+    background-color: rgb(231, 230, 230);
+    padding: 7px 10px;
+    border-radius: 30px;
+    margin-bottom: 16px;
+}
+
+.navigate .down {
+    font-size: 2rem;
+    background-color: rgb(231, 230, 230);
+    padding: 7px 10px;
+    border-radius: 30px;
+}
+
+.navigate .up:hover {
+    color: yellow;
+}
+
+.navigate .down:hover {
+    color: yellow;
 }
