--- a/index.css
+++ b/index.css
@@ -66,7 +66,10 @@ body {
     height: 100%;
     object-fit: cover;
 }
-
+.slider .swiper-slide iframe{
+    height: 99%;
+    width: 100%;
+}
 .navigate {
     /* background-color: pink; */
     position: absolute;
